Eureka Server and Client, 微服务 payment 和 order, Cluster 访问
Eureka基础， 安装，payment 和 order 微服务module建造和cluster module，Eureka  server, cluster配置加load balancer和DiscoveryClient 微服务信息获取，自我保护机制

--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,12 @@
     <modules>
         <module>cloud-provider-payment-8001</module>
         <module>cloud-consumer-order80</module>
-        <module>cloud-api-commons</module>
-        <module>cloud-api-commons</module>
-        <module>cloud-api-commons</module>
-        <module>com.test.springcloud</module>
-        <module>cloud-api-commons</module>
-        <module>cloud-api-commons</module>
         <module>cloud-api-common</module>
+        <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
+        <module>cloud-provider-payment-8002</module>
     </modules>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
-    </dependencies>
+
 
     <packaging>pom</packaging>
 
