--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>cloud-consumerzk-order-80</module>
         <module>cloud-provider-payment-8006</module>
         <module>cloud-consumerconsul-order80</module>
+        <module>cloud-consumer-openfeign-order80</module>
     </modules>
 
 
