--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>cloud-provider-payment-8006</module>
         <module>cloud-consumerconsul-order80</module>
         <module>cloud-consumer-openfeign-order80</module>
+        <module>cloud-provider-hystrix-payment-8001</module>
+        <module>cloud-consumer-feign-hystrix-order80</module>
     </modules>
 
 
