--- a/cloud-config-center-3344/src/main/resources/application.yml
+++ b/cloud-config-center-3344/src/main/resources/application.yml
@@ -18,8 +18,20 @@ spring:
             - springcloud-config
       ##读取分支
       label: master
+  rabbitmq: #rabbit相关配置 15672是web管理界面的端口，5672是MQ访问的端口
+      host: localhost
+      port: 5672
+      username: guest
+      password: guest
 
 eureka:
   client:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
+
+#rabbitmq相关设置 ，暴露 bus刷新配置的端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: 'bus-refresh'
