Update cloud-eurekaserver-7001 pom and yaml file for docker compose file needed
Change the pom file in order cloud eureka server 7001 able to generate jar file to be use in dockerfile build up, and yaml file for docker compose to able create multiple containers based on the spring profiles

--- a/cloud-eureka-server7001/pom.xml
+++ b/cloud-eureka-server7001/pom.xml
@@ -3,12 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cloud</artifactId>
-        <groupId>org.springcloud</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.12.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>spring.cloud</groupId>
+    <version>0.0.1</version>
     <artifactId>cloud-eureka-server7001</artifactId>
 
     <properties>
@@ -60,5 +63,22 @@
 
     </dependencies>
 
+    <!-- 这里必须在sub module的microservices放入这个，不然 maven 打不了jar包 -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.2.5.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
