--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springcloud</groupId>
-    <artifactId>cloud</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.3.12.RELEASE</version>
     <modules>
         <module>cloud-provider-payment-8001</module>
         <module>cloud-consumer-order80</module>
@@ -106,6 +106,7 @@
         </dependencies>
     </dependencyManagement>
 
+    <!-- 这里在parent module放入这个，以便让maven打jar包 -->
     <build>
         <plugins>
             <plugin>
@@ -113,7 +114,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.2.5.RELEASE</version>
                 <configuration>
-                    <skip>true</skip>
                     <fork>true</fork>
                     <addResources>true</addResources>
                 </configuration>
