--- a/cloud-provider-payment-8001/pom.xml
+++ b/cloud-provider-payment-8001/pom.xml
@@ -62,5 +62,23 @@
 
     </dependencies>
 
+    <!-- 这里必须在sub module的microservices放入这个，不然 maven 打不了jar包 -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.2.5.RELEASE</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
