--- a/cloud-provider-payment-8001/src/main/resources/application.yaml
+++ b/cloud-provider-payment-8001/src/main/resources/application.yaml
@@ -6,10 +6,10 @@ spring:
     name: cloud-payment-service
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    #driver-class-name: com.mysql.cj.jdbc.Driver
     #url: jdbc:mysql://localhost:3306/springdemo?useTimezone=true&serverTimezone=UTC
-    # when using docker-compose create the provider service, the sql container that want connect need to be same network with this provider,
-    # remember to use the container port instead of host port, because the sql and provider service in the same network, they can ping each other directly
+     when using docker-compose create the provider service, the sql container that want connect need to be same network with this provider,
+     remember to use the container port instead of host port, because the sql and provider service in the same network, they can ping each other directly
     url: jdbc:mysql://sql_container3:3306/springdemo
     username: root
     password: 61376554
